# baulv

./: .env.example  .gitignore  AGENT_READINESS.md  Dockerfile  docker-compose.yml  start-all.sh  start-docker.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_onorm_knowledge_base.py  003_lv_structure.py  004_chat.py  005_onorm_library.py  006_users_auth.py  007_project_user_id.py  008_drop_onorm_pdf_storage.py  009_audit_sessions_privacy.py  010_drop_onorm_tables.py  011_wall_calculation_fields.py  012_lv_templates.py  013_leistungsgruppe_timestamps.py  014_api_keys.py  015_security_stage4.py  016_perimeter_source_backfill.py  017_rooms_plan_id_set_null.py  018_room_pin_coordinates.py  019_consent_snapshots.py  020_password_reset_tokens.py  021_neutralize_template_seed_strings.py  022_usage_analytics.py
backend/app/: api_key_auth.py  auth.py  config.py  dependencies.py  dsgvo_retention.py  legal_versions.py  main.py  rate_limit.py  subscriptions.py
backend/app/api/: admin.py  api_keys.py  auth.py  buildings.py  chat.py  lv.py  onorm.py  ownership.py  plans.py  projects.py  rooms.py  router.py  stripe_api.py  support_chat.py  templates.py
backend/app/calculation_engine/: __init__.py  base_trade.py  engine.py  registry.py  types.py
backend/app/calculation_engine/trades/: __init__.py  malerarbeiten.py
backend/app/chat/: assistant.py
backend/app/chat/prompts/: construction_assistant.txt  support_assistant.txt
backend/app/db/: session.py
backend/app/db/models/: __init__.py  analytics.py  api_key.py  audit.py  calculation.py  chat.py  consent.py  lv.py  lv_template.py  mcp_audit.py  onorm.py  password_reset_token.py  plan.py  project.py  session.py  user.py
backend/app/export/: pdf_exporter.py  xlsx_exporter.py
backend/app/lv_generator/: generator.py
backend/app/lv_generator/prompts/: position_text_system.txt
backend/app/mcp/: __init__.py  audit.py  principal.py  server.py  transport.py
backend/app/onorm_rag/: ingest.py  retriever.py
backend/app/plan_analysis/: pipeline.py
backend/app/plan_analysis/prompts/: room_extraction.txt
backend/app/schemas/: api_key.py  chat.py  lv.py  onorm.py  plan.py  project.py  room.py  template.py  user.py
backend/app/services/: analytics.py  audit.py  audit_cleanup.py  consent.py  dsgvo.py  email.py  password_reset.py  wall_calculator.py
backend/scripts/: demo_mcp_agent.py  test_coordinates.py  test_vision_prompt.py
backend/tests/: conftest.py
backend/tests/test_api/: test_audit_cleanup.py  test_calculate_empty_rooms.py  test_consent.py  test_password_reset.py  test_plans_delete.py  test_plans_upload_metadata.py  test_position_edit.py  test_projects_delete.py  test_rooms_perimeter_source.py
backend/tests/test_calculation_engine/: test_calculate_lv_upsert.py  test_malerarbeiten.py
backend/tests/test_mcp/: test_audit.py  test_mcp_tools.py  test_pat_auth.py  test_rate_limit.py
backend/tests/test_plan_analysis/: test_image_resize.py  test_perimeter_estimate.py  test_pin_coordinates.py  test_pipeline_diagnostics.py
backend/tests/test_services/: test_analytics.py  test_wall_calculator.py
demo/: demo_script.md
docs/: ADMIN.md  AGENT_INTEGRATION.md  DEPLOY.md  ID_MIGRATION.md  PROMPT_TEST_v22_3.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: llms.txt  manifest.json  sw.js
frontend/public/.well-known/: mcp.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: apiKeys.ts  auth.ts  chat.ts  client.ts  lv.ts  plans.ts  projects.ts  rooms.ts  stripe.ts  structure.ts  supportChat.ts  (+1 more)
(+50 files in other folders)
