[project]
name = "baulv-backend"
version = "0.1.0"
description = "AI-gestützte Bau-Ausschreibungssoftware Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "anthropic>=0.40.0",
    "pymupdf>=1.24.0",
    "pdf2image>=1.17.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "pgvector>=0.3.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sse-starlette>=2.0.0",
    "Pillow>=10.0.0",
    "stripe>=7.0.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    # Model Context Protocol SDK — backs the /mcp SSE endpoint that
    # external agents (Claude Desktop, n8n, ChatGPT custom connectors)
    # connect to. See app/mcp/.
    "mcp>=1.0.0",
    # Redis client for the multi-worker rate-limit backend. Imported
    # lazily inside ``app.rate_limit`` only when ``REDIS_URL`` is set —
    # so single-worker / dev deployments without a Redis can run
    # without a redis server, but the package must still be installed
    # so the import succeeds when the env var IS set. ``redis>=5`` is
    # the first version with native asyncio support out of the box.
    "redis>=5.0.0",
    # Resend SDK for transactional email (DS-3 password reset, DS-NN
    # future flows like privacy-update notifications). Imported
    # lazily inside ``app.services.email`` only when an email
    # actually needs sending — so dev runs without RESEND_API_KEY
    # don't crash on import, they just log a warning when sending
    # is attempted.
    "resend>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "factory-boy>=3.3.0",
    "httpx>=0.27.0",
    # Async SQLite driver. Used by the test harness in ``tests/conftest.py``
    # so calculation-engine tests can spin up an isolated in-memory DB
    # without needing a running Postgres instance.
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
# ``asyncio_mode = "auto"`` lets us write ``async def test_...`` without
# decorating every test with ``@pytest.mark.asyncio``. The DB tests in
# ``tests/test_calculation_engine/test_calculate_lv_upsert.py`` rely on
# this.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
